--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- Top News Marquee -->
   <div class="marquee">
-    <span>🔴 I am Ram Prosad Sarker. From Adrik18....Department of ICT, MBSTU</span>
+    <span>🔴 This is Ram Prosad Sarker. From Adrik18....Department of ICT, MBSTU.. The website is in under construction..</span>
   </div>
 
   <!-- YouTube "Audio-like" Embed -->
@@ -71,7 +71,7 @@
   <!-- Equation Section -->
   <section>
     <h2>📐 Mathematical Equation</h2>
-    <p>Here is the quadratic formula:</p>
+    <p>Here is the formula using sub & sup tag:</p>
     <p>
       x<sub>2</sub> = (b + √(b<sup>2</sup> - 4ac)) / 2a
     </p>
